# langchain-learning-with-full-codex

./: .env.example  .gitignore  AGENTS.md  LANGCHAIN_PLAN.md  README.md  deep-research-report.md  pyproject.toml
.agents/: CHANGE_LOG.md  LANGCHAIN_PLAN.md  STAGE_SUMMARIES.md
examples/: 01_hello_agent.py  02_tools_agent.py  03_structured_output.py  04_memory.py  05_rag.py  06_mcp.py  07_langsmith_eval.py
learning/LC-01_version_boundary/: version_boundary.md
learning/LC-02_minimal_agent/: hello_agent.py  minimal_agent.md
learning/LC_01_version_boundary/: version_boundary.md
learning/LC_02_minimal_agent/: hello_agent.origin.py  hello_agent.py  minimal_agent.md
learning/LC_03_models/: model_config_skeleton.origin.py  model_config_skeleton.py  models.md
learning/LC_04_messages/: message_flow_skeleton.origin.py  message_flow_skeleton.py  messages.md
learning/LC_05_tools/: tool_calling_skeleton.origin.py  tool_calling_skeleton.py  tools.md
learning/LC_06_structured_output/: structured_output.md  structured_output_skeleton.origin.py  structured_output_skeleton.py
learning/LC_07_runtime/: runtime.md  runtime_context_skeleton.origin.py  runtime_context_skeleton.py
learning/LC_08_middleware/: middleware.md  middleware_skeleton.origin.py  middleware_skeleton.py
learning/LC_09_context_engineering/: context_engineering.md  context_engineering_skeleton.origin.py  (+1 more)
notes/: 01_version_boundary.md  02_core_components.md  03_tools.md  04_structured_output.md  05_memory.md  06_rag.md  07_mcp.md  08_langsmith.md  09_langgraph.md
tests/: test_project_import.py
(+32 files in other folders)
